[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leakosint-cli"
version = "1.0.0"
description = "CLI tool for LeakOSINT API"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "Sumit", email = "your.email@example.com"}
]
dependencies = [
    "requests>=2.25.0",
]

[project.urls]
Homepage = "https://github.com/sumit-yu-bot/onsit"

[project.scripts]
leakosint = "leakosint_cli.main:main"
